--- a/ui/form-builder-app/src/index.css
+++ b/ui/form-builder-app/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,6 +14,7 @@ code {
 
 .main-container {
   margin: auto;
+  padding-top: 10%;
 }
 
 .form-card {
@@ -39,4 +40,45 @@ code {
 
 a {
   color: red;
+  padding-left: 15%;
+}
+
+a:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button {
+  font-size: medium;
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    sans-serif;
+}
+
+input {
+  font-size: medium;
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    sans-serif;
+}
+
+select {
+  font-size: medium;
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    sans-serif;
+}
+
+button:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.delete:hover {
+  color: red;
+}
+
+.submit {
+  background-color: green;
+  color: white;
 }
