--- a/ui/form-builder-app/src/index.css
+++ b/ui/form-builder-app/src/index.css
@@ -15,6 +15,7 @@ code {
 .main-container {
   margin: auto;
   padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .form-card {
@@ -31,6 +32,11 @@ code {
 .column-container {
   display: grid;
   grid-template-columns: 2fr 2fr 1fr;
+}
+
+.flex-container {
+  display: flex;
+  justify-content:space-evenly;
 }
 
 .row-container {
@@ -53,6 +59,8 @@ button {
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     sans-serif;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 input {
@@ -60,6 +68,8 @@ input {
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     sans-serif;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 select {
@@ -74,11 +84,25 @@ button:hover {
   font-weight: bold;
 }
 
+.delete {
+  text-align:left;
+}
+
 .delete:hover {
   color: red;
+  cursor: pointer;
+}
+
+a {
+  position: relative;
+  bottom: 0px;
 }
 
 .submit {
+  border-radius: 12px;
+  border: none;
+  padding: 5%;
+  font-size: 18px;
   background-color: green;
   color: white;
 }
