--- a/ui/form-builder-app/src/index.css
+++ b/ui/form-builder-app/src/index.css
@@ -21,6 +21,7 @@ code {
 .form-card {
     margin: auto;
     width: 50%;
+    border-radius: 12px;
     border: 3px solid cadetblue;
     padding: 10px;
 }
